cmake_minimum_required(VERSION 3.22)
project(zcontrol)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_compile_options(-D_FILE_OFFSET_BITS=64)

option(WITH_COMMANDER "Include Commander Library" ON)
option(WITH_WORKER "Include Worker Library" ON)
option(WITH_ZCFS "Include ZCFS Executable" ON)
option(WITH_ZCWORKERD "Include ZCWorker Daemon Executable" ON)
option(WITH_TESTS "Build Tests" ON)

add_subdirectory(base)
add_subdirectory(common)
if(WITH_COMMANDER)
  add_subdirectory(commander)
endif()
if(WITH_WORKER)
  add_subdirectory(worker)
endif()
if(WITH_ZCFS)
  add_subdirectory(zcfs)
endif()
if(WITH_ZCWORKERD)
  add_subdirectory(zcworkerd)
endif()

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND WITH_TESTS)
  add_subdirectory(tests)
endif()
